--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     rev: v4.3.0
     hooks:
     -   id: end-of-file-fixer
+    -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
@@ -19,3 +20,8 @@ repos:
     hooks:
     -   id: black
         args: ["--line-length=120"]
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.14.1
+    hooks:
+    -   id: mypy
+        args: ["src"]
