--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     rev: 7.1.2
     hooks:
     -   id: flake8
-        args: ["--max-complexity=5", "--max-line-length=120"]
+        args: ["--max-complexity=5", "--max-line-length=120", "--extend-ignore=E203"]
 -   repo: https://github.com/PyCQA/autoflake
     rev: v2.3.1
     hooks:
